# liburing

./: .gitignore  CMakeLists.txt  Cargo.toml  fix.py  rustfmt.toml  tag-c.lua
.github/workflows/: ci.yml
examples/: Makefile  liburing.h.in
liburing-rs/: README.md  build.rs
liburing-rs/benches/: nop.rs
liburing-rs/docs/: IO_URING_CHECK_VERSION.md  __io_uring_buf_ring_cq_advance.md  io_uring.md  io_uring_buf_ring_add.md  io_uring_buf_ring_advance.md  io_uring_buf_ring_available.md  io_uring_buf_ring_cq_advance.md  io_uring_buf_ring_init.md  io_uring_buf_ring_mask.md  io_uring_cancelation.md  io_uring_check_version.md  io_uring_clone_buffers.md  io_uring_clone_buffers_offset.md  io_uring_close_ring_fd.md  io_uring_cq_advance.md  io_uring_cq_eventfd_enabled.md  io_uring_cq_eventfd_toggle.md  io_uring_cq_has_overflow.md  io_uring_cq_ready.md  io_uring_cqe_get_data.md  io_uring_cqe_get_data64.md  io_uring_cqe_nr.md  io_uring_cqe_seen.md  io_uring_enable_rings.md  io_uring_enter.md  io_uring_enter2.md  io_uring_for_each_cqe.md  io_uring_free_buf_ring.md  io_uring_free_probe.md  io_uring_get_events.md  io_uring_get_probe.md  io_uring_get_probe_ring.md  io_uring_get_sqe.md  io_uring_get_sqe128.md  io_uring_linked_requests.md  io_uring_major_version.md  io_uring_memory_size_params.md  io_uring_minor_version.md  io_uring_mlock_size.md  io_uring_mlock_size_params.md  (+157 more)
liburing-rs/src/: lib.rs  uring.rs
liburing-rs/tests/: init.rs  main.rs  recvsend_bundle.rs
src/: CMakeLists.txt
test/: .cq-overflow  Cargo.toml  Makefile  lib.rs  liburing.h.in  recvsend_bundle2.c  wait-timeout.c
