[package]
name = "axboe-liburing"
version = "2.14.0"
edition = "2024"
build = "liburing-rs/build.rs"
description = "Low-level io_uring interface, transliterated from Jens Axboe's liburing."
license = "MIT OR LGPL-2.1-only"
repository = "https://github.com/cmazakas/liburing"
readme = "liburing-rs/README.md"
keywords = ["io_uring", "io-uring", "liburing", "linux-io", "async-io"]
categories = ["asynchronous", "network-programming", "filesystem", "api-bindings"]
documentation = "https://man.archlinux.org/listing/extra/liburing/"
include = [
  "/src/arch",
  "/src/*.c",
  "/src/*.h",
  "/src/*.map",
  "/src/include/liburing.h",
  "/src/include/liburing/barrier.h",
  "/src/include/liburing/io_uring.h",
  "/src/include/liburing/sanitize.h",
  "/src/include/liburing/io_uring/query.h",
  "/src/Makefile*",
  "/Makefile*",
  "configure",
  "/liburing*.pc.in",
  "/liburing.spec",
  "/liburing-rs/src",
  "/liburing-rs/include",
  "/liburing-rs/Cargo.lock",
  "/liburing-rs/build.rs",
  "/liburing-rs/tests",
  "/liburing-rs/benches",
]

[lib]
name = "liburing_rs"
path = "liburing-rs/src/lib.rs"

[build-dependencies]
bindgen = "0.71.1"

[dev-dependencies]
io-uring = "0.7.4"
criterion = "0.5.1"
rand = "0.9.0"
nix = { version = "0.29.0", features = ["net"] }

[features]
sanitizers = []
bindgen-cli = []

[profile.release-with-debug]
inherits = "release"
debug = "full"

[[test]]
name = "liburing-rs-tests"
path = "liburing-rs/tests/main.rs"

[[bench]]
name = "nop"
path = "liburing-rs/benches/nop.rs"
harness = false
